--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,46 @@
 /* 
     
 */
+body 
+{
+    margin: 0px;
+    padding: 0px;
+}
+
+#application
+{
+    display: grid;
+
+    grid-template-rows: auto auto auto;
+    grid-template-columns: auto;
+
+    grid-gap: 36px;
+
+    padding:0px;
+    margin: 0px;
+}
+
+header
+{
+    display: block;
+    width: 100%;
+    height: 120px;
+}
+
+main
+{
+    display: block;
+    width: 100%;
+    height: 120px;
+
+
+}
+
+footer 
+{
+    display: block;
+    width: 100%;
+    height: 120px;
+
+
+}
